Fix spacing between header-cards & header-nav cards

--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,7 @@ header .container {
 /********************/
 /* Header Nav Cards */
 .header-nav {
+	align-self: start;
 	grid-column: span 2;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
